# studiomdlPlusPlus

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: bmpread.c  bmpread.cpp  cmdlib.c  cmdlib.cpp  cmdlib.h  cmdlib.hpp  mathlib.c  mathlib.cpp  mathlib.h  mathlib.hpp  modeldata.hpp  qc.hpp  qctokenizer.cpp  qctokenizer.hpp  resource.h  scriplib.c  scriplib.cpp  scriplib.h  studio.h  studio.hpp  studio_event.h  studiomdl.c  studiomdl.cpp  studiomdl.h  studiomdl.hpp  trilib.c  trilib.h  tristrip.c  tristrip.cpp  tristrip.hpp  write.c  write.cpp  write.h  writemdl.cpp  writemdl.hpp
src/format/: mdl.hpp  qc.cpp  qc.hpp  smd.hpp
src/format/image/: bmp.hpp  bmpread.cpp
src/monsters/: activity.h  activity.hpp  activitymap.h  activitymap.hpp
src/utils/: cmdlib.cpp  cmdlib.hpp  mathlib.cpp  mathlib.hpp  stripification.cpp  stripification.hpp
